syntax = "proto3";
package mapReduce;

message RegisterRequest {
    string workerHostname = 1;
}

message RegisterResponse {
    int32 workerID = 1;
    int32 numReduceJobs = 2; 
}

message RunArgs {
    int32 id = 1;
    string filePath = 2;
}

service RegisterService {
    rpc registerWorker(RegisterRequest) returns (RegisterResponse);
}

service RunMapService {
    rpc runMap(RunArgs) returns ();
}

service RunReduceService {
    rpc runReduce(RunArgs) returns ();
}

service SignalDoneService {
    rpc done()
}