syntax = "proto3";
package common_rpc;

// Server will be the Master, and clients will be the workers.
service Register {
    // Procedure that will be called by workers to register in the master
    rpc Register (RegisterArgs) returns (RegisterReply) {}
}

// Server will be the workers, and client will be the master.
service Runner {
  // Run map operation in worker
  rpc RunMap (RunArgs) returns (EmptyMessage) {}

  // Run reduce operation in worker
  rpc RunReduce (RunArgs) returns (EmptyMessage) {}

  // Procedure that will be called by master when the worker task is done
  rpc Done (EmptyMessage) returns (EmptyMessage) {}
}

message RegisterArgs {
  string worker_hostname = 1;
}

message RegisterReply {
  int32 worker_id = 1;
  int32 reduce_jobs = 2;
}

message RunArgs {
  int32 id = 1;
  string file_path = 2;
}

message EmptyMessage {
}